@@ -157,9 +157,9 @@ public class Ranger extends StdCharClass
 		CMLib.ableMapper().addCharAbilityMapping(ID(),4,"Fighter_ArmorTweaking",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),4,"Chant_RepelVermin",false);
 
-		CMLib.ableMapper().addCharAbilityMapping(ID(),5,"Spell_ReadMagic",true);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),5,"Spell_ReadRunes",true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),5,"Chant_PredictWeather",false);
-		CMLib.ableMapper().addCharAbilityMapping(ID(),5,"Skill_WandUse",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),5,"Skill_ShardUse",false);
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Chant_LocatePlants",true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Skill_Revoke",false);
