@@ -4288,6 +4288,21 @@ The player is proficient with slings, gaining the ability to use \
 them even if their current class training would not make it \
 feasible normally.
 
+STANCE=FIGHTER_STANCE
+FIGHTER_STANCE=<ABILITY>\
+Usage    : STANCE OFFENSIVE/DEFENSIVE/WILD/NONE\n\r\
+Example  : stance offensive\n\r\
+During combat, the fighter takes on one of the fighting stances he \
+or she has been trained in.  Each stance offers a small bonus to \
+combat stats, but is also counterable by another stance:\n\r\
+Offensive : +attack, -armor, countered by Defensive\n\r\
+Defensive : +armor -attack, countered by Wild\n\r\
+Wild      : +damage, -attack, -armor, countered by Offensive\n\r\
+None      : cancels your fighter stance.\n\r\
+\n\r\
+The fighting stance of your opponent, if any, can be seen only \
+when combat has started.
+
 PROFICIENCY_STAFF=STAFF_PROFICIENCY
 STAFF_PROFICIENCY=<ABILITY>\
 The player is proficient with staffs, gaining the ability to use \
