@@ -49,6 +49,8 @@
  47. Builder version of OUTFIT can now be targeted, and give metacrafted gear
  48. Std/Gen Languages can now be marked as natural to differentiate human from encryption/animal sounds
  49. New user config: NOREPROMPT -- for getting new prompts only when user input received
+ 50. New fighter skill: Stance.
+ 51. Fighters lose wand use, Rangers swap wands for runes, Paladins wands for relics.
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
